# ride-share-simulator

./: .gitignore  Dockerfile.base  LICENSE  README.md  config.yaml  deploy.sh  docker-compose.yaml  pyproject.toml  questions.md
config/: config.py  config.yaml  dispatcher.py  metrics.py  rides_producer.py
services/clock/: Dockerfile  main.py
services/dispatcher/: Dockerfile  assignments_producer.py  main.py  rides_consumer.py
services/dispatcher/matching_strategies/: nearest.py  strategy.py  strategy_factory.py  weighted.py
services/drivers_loader/: Dockerfile  drivers.json  main.py
services/events_producer/: config.yaml  main.py
services/metrics/: Dockerfile  consumer.py  main.py
services/rides_producer/: Dockerfile  config.py  loader.py  main.py  producer.py  rides.json
shared/: files.py  geo.py
shared/config/: clock.py  config.py  config_watcher.py  dispatcher.py  drivers_loader.py  metrics.py  rides_producer.py  services.py
shared/kafka/: __init__.py  async_consumer.py  consumer.py  producer.py
shared/logger/: __init__.py
shared/models/: __init__.py  assignment.py  common.py  driver.py  metrics.py  ride.py
shared/redis_sdk/: __init__.py  client.py  driver.py  metrics.py  sim_clock.py
tests/: events.json
